--- a/CSS/style.css
+++ b/CSS/style.css
@@ -90,7 +90,7 @@ body {
     margin: 0;
 }
 
-.modal .modal-content button.btn-close, #tickers-list .ticker button.btn-close  {
+.modal .modal-content button.btn-close, #tickers-list .ticker button.btn-close, #tickers-list .ticker button.btn-refresh{
     position: absolute;
     top: 0px;
     right: 10px;
@@ -144,5 +144,10 @@ body {
     line-height: 14px;
     right: 5px;
     display: none;
+}
+
+#tickers-list .ticker button.btn-refresh {
+    right: 25px;
+    top: -7px;
 }
 
